@@ -1,3 +1,8 @@
+2005-06-28  T Rowley  <tim.rowley@gmail.com>
+
+	* src/cairo-atsui-font.c (_cairo_atsui_font_text_to_glyphs):
+	Prevent crash on empty string.
+
 2005-06-25  Keith Packard  <keithp@keithp.com>
 
 	reviewed by: cworth
